DMS-190 fixes alignment of card content and removes own gutter width

--- a/src/main/resources/META-INF/resources/scss/base/_general.scss
+++ b/src/main/resources/META-INF/resources/scss/base/_general.scss
@@ -23,15 +23,14 @@ footer {
 .mcr-card-figure {
   object-fit: contain;
   width:100%;
-  padding: 15px;
 }
 .card-deck .card,
 .card {
-  margin-bottom: .75rem;
+  margin-bottom: 30px;
 }
 .card.mb-2,
 .card.mb-3 {
-  margin-bottom: .75rem !important;
+  margin-bottom: 30px !important;
 }
 
 .card-header,
