--- a/src/main/resources/META-INF/resources/scss/utilities/_variables.scss
+++ b/src/main/resources/META-INF/resources/scss/utilities/_variables.scss
@@ -10,7 +10,7 @@ $koeln-red:        #c81e0f;
 
 
 $badge-font-weight: normal;
-$grid-gutter-width: .75rem;
+//$grid-gutter-width: .75rem;
 
 /* add new/overwrite custom colors */
 $theme-colors: (
